# osdev-x

./: Cargo.toml  Justfile  Makefile  Makefile.toml  build.sh  gdb.sh  qemu.sh
etc/: aarch64-osdev-none.json  aarch64-osdev-none.ld  aarch64-unknown-none.gdb  aarch64-unknown-none.json  aarch64-unknown-none.ld
etc/gentables/: Cargo.toml
etc/gentables/src/: main.rs
kernel/: Cargo.toml
kernel/src/: debug.rs  main.rs  panic.rs  sync.rs  syscall.rs  util.rs
kernel/src/arch/aarch64/: context.S  context.rs  exception.rs  intrinsics.rs  mod.rs  smp.rs  table.rs  timer.rs  vectors.S
kernel/src/arch/aarch64/boot/: mod.rs
kernel/src/arch/aarch64/gic/: gicd.rs
kernel/src/arch/aarch64/plat_qemu/: mod.rs
kernel/src/device/: interrupt.rs  mod.rs  platform.rs  timer.rs  tty.rs
kernel/src/device/serial/: mod.rs  pl011.rs
kernel/src/fs/: devfs.rs  mod.rs
kernel/src/mem/: device.rs  heap.rs  mod.rs  table.rs
kernel/src/mem/phys/: manager.rs  mod.rs
kernel/src/proc/: exec.rs  io.rs  mod.rs  wait.rs
kernel/src/task/: mod.rs  process.rs  sched.rs
lib/abi/: Cargo.toml
lib/abi/src/: error.rs  io.rs  lib.rs  path.rs
lib/libusr/: Cargo.toml
lib/libusr/src/: debug.rs  env.rs  lib.rs  process.rs
lib/syscall/: Cargo.toml
lib/syscall/src/: lib.rs
lib/tables/: Cargo.toml
lib/tables/src/: lib.rs
lib/vfs/: Cargo.toml
lib/vfs/src/: block.rs  char.rs  file.rs  fs.rs  ioctx.rs  lib.rs  node.rs
src/: debug.rs  exception.rs  main.rs  mem.rs  panic.rs  pl011.rs  sched.S  sched.rs  syscall.rs  util.rs
src/arch/: mod.rs
src/arch/aarch64/: context.S  context.rs  cpu.rs  devtree.rs  exception.rs  intrinsics.rs  mod.rs  smp.rs  table.rs  timer.rs  vectors.S
src/arch/aarch64/boot/: mod.rs
src/arch/aarch64/gic/: gicc.rs  gicd.rs  mod.rs
src/arch/aarch64/plat_qemu/: mod.rs
src/boot/: mod.rs
src/device/: interrupt.rs  mod.rs
src/device/serial/: mod.rs  pl011.rs
src/mem/: device.rs  fixed.rs  heap.rs  mod.rs  phys.rs  table.rs
src/mem/phys/: manager.rs  mod.rs  reserved.rs
src/task/: mod.rs  process.rs  sched.rs
usr/test_program/: Cargo.toml
usr/test_program/src/: main.rs
