[package]
name = "osdev-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.3.1"
bitflags = "2.3.3"
tables = { version = "0.1.0", path = "lib/tables" }
tock-registers = "0.8.1"

[workspace]
members = ["lib/tables", "etc/gentables"]
