[package]
name = "osdev-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.3.1"
bitflags = "2.3.3"
fdt-rs = { version = "0.4.3", default-features = false }
static_assertions = "1.1.0"
tock-registers = "0.8.1"
