[package]
name = "gentables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
bytemuck = "1.13.1"
clap = { version = "4.3.10", features = ["derive"] }
elf = "0.7.2"
tables = { version = "0.1.0", path = "../../lib/tables", features = ["bytemuck"] }
